# GameDev

./: .configure.sh  .gitignore  CMakeLists.txt
documents/: camera_based_rotation  no_rotation
include/: objLoader.hpp  utils.hpp
src/: main.cpp  objLoader.cpp  test
